ultimos cambios antes del SR

--- a/src/app/components/drinkly-team/drinkly-team.component.html
+++ b/src/app/components/drinkly-team/drinkly-team.component.html
@@ -4,7 +4,7 @@
     <div *ngIf="!loadingDrinks && !loadingUsers && !loadingBars">
         <!-- BARRA DEL MENÚ-->
         <div class="flex sticky top-0 bg-black w-full z-10">
-            <a href="/home"
+            <a href="/"
                 ><img
                 src="assets/images/Drinkly-2.png"
                 alt="logo_drinkly"
