--- a/src/app/components/admin/admin-header/admin-header.component.html
+++ b/src/app/components/admin/admin-header/admin-header.component.html
@@ -1,7 +1,13 @@
 <div class="flex bg-black fixed top-0 w-full z-10">
   <!-- <app-sidebar></app-sidebar> -->
-  <a href="/"><img src="assets/images/Drinkly-2.png" alt="logo_drinkly"
-      class="object-scale-down h-16 mx-auto ml-8" /></a>
+  <div class="ml-20 my-1">
+    <a href="/"
+      ><img
+        src="assets/images/Drinkly-2.png"
+        alt="logo_drinkly"
+        class="object-scale-down h-16 transition duration-500 ease-in-out transform  hover:scale-110"
+    /></a>  
+    </div>
 </div>
 <div class="bg-gray-400 h-64 w-full flex items-center flex-col" style="
     background-image: url(assets/images/header13.jpg);
