--- a/src/app/components/bars/detail-bar/detail-bar.component.html
+++ b/src/app/components/bars/detail-bar/detail-bar.component.html
@@ -45,6 +45,17 @@ style="margin-left: 0;"
   <div class="mt-12 m-auto max-w-3xl text-center">  
     <div class="text-3xl bold">RATING:</div>  
     {{bar.rating}}
+    <div class="flex justify-center">
+      <div *ngFor="let s of stars">
+        <div *ngIf="s" class="w-16 px-2">
+          <img src="../../../../assets/images/star_y.svg" alt="si">
+        </div>
+        <div *ngIf="!s" class="w-16 px-2">
+          <img src="../../../../assets/images/star_g.svg" alt="si">
+        </div>
+      </div>  
+    </div>
+    
   </div>
 
   <div class="mt-12 m-auto max-w-3xl text-center">  
@@ -67,7 +78,10 @@ style="margin-left: 0;"
 
     <div class="mt-5 m-auto max-w-3xl text-center">  
       <div class="text-1xl bold">Teléfonos: </div>  
-        <div *ngFor="let p of bar.phone" class="pt-2">{{p}}</div>
+        <div *ngFor="let p of bar.phone" class="pt-2">
+          <a href="tel:{{p}}">{{p}}</a>
+          
+        </div>
     </div>
 
       <div class="flex flex-initial space-x-6 justify-center mt-8">
