--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -3,8 +3,8 @@
     width: 95%;
     display: grid;
     grid-template-columns: repeat(1, minmax(0, 1fr));
-    padding-right: 2.5rem;
-    padding-left: 2.5rem;
+    // padding-right: 1.5rem;
+    // padding-left: 1.5rem;
     gap: 1rem;
 /* Medium (md) */
 @media (min-width: 768px) { 
@@ -60,8 +60,8 @@
     width: 95%;
     display: grid;
     grid-template-columns: repeat(1, minmax(0, 1fr));
-    padding-right: 2.5rem;
-    padding-left: 2.5rem;
+    // padding-right: 2.5rem;
+    // padding-left: 2.5rem;
     gap: 1rem;
 /* Medium (md) */
 @media (min-width: 768px) { 
@@ -112,8 +112,8 @@
     width: 95%;
     display: grid;
     grid-template-columns: repeat(1, minmax(0, 1fr));
-    padding-right: 2.5rem;
-    padding-left: 2.5rem;
+    // padding-right: 2.5rem;
+    // padding-left: 2.5rem;
     gap: 1rem;
 /* Medium (md) */
 @media (min-width: 768px) { 
