--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,12 +1,15 @@
 
 
 <div class="flex bg-black fixed top-0 w-full z-10">
+  <div class="ml-20 my-1">
   <a href="/"
     ><img
       src="assets/images/Drinkly-2.png"
       alt="logo_drinkly"
-      class="object-scale-down h-16 mx-auto ml-8"
-  /></a>
+      class="object-scale-down h-16 transition duration-500 ease-in-out transform  hover:scale-110"
+  /></a>  
+  </div>
+  
 </div>
 <div
   class="bg-gray-400 h-64 w-full flex items-center flex-col"
