--- a/src/app/components/juegos/juegos.component.html
+++ b/src/app/components/juegos/juegos.component.html
@@ -97,7 +97,7 @@
                                         Le toco la ficha
                                     </div>
                                     <div class="flex justify-center pb-4">
-                                        <div class="flex justify-center rounded-full w-1/2 h-12 py-2 px-16 bg-white"> {{ficha}} </div>
+                                        <img src="assets/images/{{ficha}}.svg" alt="">
                                     </div>
                                     
                                     <div class="flex justify-center pb-4">
