--- a/src/app/components/admin/bar/edit-bar/edit-bar.component.html
+++ b/src/app/components/admin/bar/edit-bar/edit-bar.component.html
@@ -27,7 +27,7 @@
                             </label>
                         </div>
                         <div class="md:w-full lg:w-4/5">
-                            <input formControlName="name" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="text" placeholder="Ej. Bar 360">
+                            <input formControlName="name" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"  type="text" placeholder="Ej. Bar 360">
                         </div>
                     </div>
                     <app-required-field [text]="'Este campo es requerido.'" *ngIf="form.get('name').invalid && form.get('name').touched"></app-required-field>
@@ -41,7 +41,7 @@
                         </label>
                         </div>
                         <div class="md:w-full lg:w-4/5">
-                        <input formControlName="working_hours" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="text" placeholder="Ej. Abiertos de 9pm a 4 am.">
+                        <input formControlName="working_hours" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"  type="text" placeholder="Ej. Abiertos de 9pm a 4 am.">
                         </div>
                     </div>
                     <app-required-field [text]="'Este campo es requerido.'" *ngIf="form.get('working_hours').invalid && form.get('working_hours').touched"></app-required-field>
@@ -55,7 +55,7 @@
                         </label>
                         </div>
                         <div class="md:w-full lg:w-4/5">
-                        <input formControlName="rating" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="number" step="1">
+                        <input formControlName="rating" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"  type="number" step="1">
                         </div>
                     </div>
                     <app-required-field [text]="'Este campo es requerido. (Valores entre 1 y 5)'" *ngIf="form.get('rating').invalid && form.get('rating').touched"></app-required-field>
@@ -69,7 +69,7 @@
                         </label>
                         </div>
                         <div class="md:w-full lg:w-4/5">
-                        <input formControlName="cost" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="number" min="1" max="5">
+                        <input formControlName="cost" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"  type="number" min="1" max="5">
                         </div>
                     </div>
                     <app-required-field [text]="'Este campo es requerido. (Valores entre 1 y 5)'" *ngIf="form.get('cost').invalid && form.get('cost').touched"></app-required-field>
@@ -83,7 +83,7 @@
                         </label>
                         </div>
                         <div class="md:w-full lg:w-4/5">
-                        <input formControlName="twitter" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="text" placeholder="Ej. http://twitter.com/usuario">
+                        <input formControlName="twitter" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"  type="text" placeholder="Ej. http://twitter.com/usuario">
                         </div>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
                     </label>
                     </div>
                     <div class="md:w-full lg:w-4/5">
-                    <input formControlName="facebook" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="text" placeholder="Ej. http://facebook.com/usuario">
+                    <input formControlName="facebook" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"  type="text" placeholder="Ej. http://facebook.com/usuario">
                     </div>
                 </div>
 
@@ -106,7 +106,7 @@
                     </label>
                     </div>
                     <div class="md:w-full lg:w-4/5">
-                    <input formControlName="instagram" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="text" placeholder="Ej. http://instagram.com/usuario">
+                    <input formControlName="instagram" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"  type="text" placeholder="Ej. http://instagram.com/usuario">
                     </div>
                 </div>
 
@@ -118,7 +118,7 @@
                             </label>
                             </div>
                             <div class="md:w-full lg:w-4/5">
-                            <input formControlName="email" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="email" placeholder="Ej. usuario@gmail.com">
+                            <input formControlName="email" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"  type="email" placeholder="Ej. usuario@gmail.com">
                         </div>
                     </div>
                     <app-required-field [text]="'Este campo es requerido y debe ser un correo'" *ngIf="form.get('email').invalid && form.get('email').touched"></app-required-field>
@@ -132,7 +132,7 @@
                         </label>
                         </div>
                         <div class="md:w-full lg:w-4/5">
-                        <input formControlName="description" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="text" placeholder="Ej. Bar360 es un lugar agradable donde puedes relajarte mientars disfrutas de la buena música...">
+                        <input formControlName="description" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"  type="text" placeholder="Ej. Bar360 es un lugar agradable donde puedes relajarte mientars disfrutas de la buena música...">
                         </div>
                     </div>
                     <app-required-field [text]="'Este campo es requerido.'" *ngIf="form.get('description').invalid && form.get('description').touched"></app-required-field>
@@ -167,7 +167,7 @@
                         </label>
                         </div>
                         <div class="md:w-full lg:w-4/5">
-                        <input formControlName="address" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="text" placeholder="Ej. Calle 7, Av. 5">
+                        <input formControlName="address" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"  type="text" placeholder="Ej. Calle 7, Av. 5">
                         </div>
                     </div>
                     <app-required-field [text]="'Este campo es requerido.'" *ngIf="form.get('address').invalid && form.get('address').touched"></app-required-field>
@@ -285,7 +285,7 @@
                                 </label>
                             </div>
                             <div class="md:w-full lg:w-4/5">
-                                <input formControlName="name" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="text" placeholder="Ej. Mojito">
+                                <input formControlName="name" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"  type="text" placeholder="Ej. Mojito">
                             </div>
                         </div>
                         <app-required-field *ngIf="group.controls.name.invalid && group.controls.name.touched" [text]="'Este campo es requerido.'"></app-required-field>
@@ -297,7 +297,7 @@
                                 </label>
                             </div>
                             <div class="md:w-full lg:w-4/5">
-                                <input formControlName="price" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="number" min="0.01" step="0.01">
+                                <input formControlName="price" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"  type="number" min="0.01" step="0.01">
                             </div>
                         </div>
                         <app-required-field *ngIf="group.controls.price.invalid && group.controls.price.touched" [text]="'Este campo es requerido. (Solo números positivos)'"></app-required-field>
@@ -309,7 +309,7 @@
                                 </label>
                             </div>
                             <div class="md:w-full lg:w-4/5">
-                                <input formControlName="description" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="text" placeholder="Ej. Cóctel muy refrescante que no sabe mucho a alcohol.">
+                                <input formControlName="description" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"  type="text" placeholder="Ej. Cóctel muy refrescante que no sabe mucho a alcohol.">
                             </div>
                         </div>
                         <div class="lg:flex lg:items-center mb-6">
