--- a/src/app/components/drinkly-team/drinkly-team.component.html
+++ b/src/app/components/drinkly-team/drinkly-team.component.html
@@ -100,7 +100,7 @@
                 <a href="http://www.w3c.org/" target="_blank" class="a_socialmedia">
                     <img
                         src="assets/images/twitter1.png"
-                        alt="insta"
+                        alt="twitter"
                         class="h-full cursor-pointer"
                     />
                 </a>
@@ -109,7 +109,7 @@
                 <a href="http://www.w3c.org/" target="_blank" class="a_socialmedia">
                     <img
                         src="assets/images/facebook1.png"
-                        alt="insta"
+                        alt="facebook"
                         class="h-full cursor-pointer"
                         style="width: auto"
                     />
@@ -119,7 +119,7 @@
                 <a href="http://www.w3c.org/" target="_blank" class="a_socialmedia">
                     <img
                         src="assets/images/insta1.png"
-                        alt="insta"
+                        alt="instagram"
                         class="h-full cursor-pointer"
                     />
                 </a>
