--- a/src/app/components/post-business/post-business.component.html
+++ b/src/app/components/post-business/post-business.component.html
@@ -187,7 +187,7 @@
 
     </div>
     <button class="back_btn" (click)="goBack()">
-      <img class="p-3" src="assets/images/goback.png" alt="" >
+      <img class="p-3" src="assets/images/goback.png" alt="button" >
     </button>
     <app-footer></app-footer>
 
