--- a/src/app/components/drinks/drinks-list/drinks-list.component.html
+++ b/src/app/components/drinks/drinks-list/drinks-list.component.html
@@ -39,8 +39,8 @@
 
           <button (click)="fav($event, item._id)" 
           class="rounded-full w-12 h-12 lg:h-10 lg:w-10  rounded-full  opacity-75 bg-white m-2 hover:bg-orange-300 transition ease-in duration-300" >
-              <img  class="p-1" src="https://image.flaticon.com/icons/svg/1828/1828970.svg" alt="" *ngIf="!is_fav(item._id)">
-              <img  class="p-1" src="https://image.flaticon.com/icons/svg/1828/1828614.svg" alt="" *ngIf="is_fav(item._id)">
+              <img  class="p-1" src="https://image.flaticon.com/icons/svg/1828/1828970.svg" alt="fav" *ngIf="!is_fav(item._id)">
+              <img  class="p-1" src="https://image.flaticon.com/icons/svg/1828/1828614.svg" alt="no-fav" *ngIf="is_fav(item._id)">
           </button>
 
             
@@ -74,7 +74,7 @@
     </div>
     </div>
     <button class="back_btn" (click)="goBack()">
-      <img class="p-3" src="assets/images/goback.png" alt="" >
+      <img class="p-3" src="assets/images/goback.png" alt="button" >
     </button>
     <app-footer></app-footer>
 
