--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -18,21 +18,27 @@
   class="w-48 sm:w-64 h-25 flex items-center absolute bottom-0 right-0"
   >
     <div class="flex flex-row space-x-10 mb-6 mt-6 sm:mt-10 sm:mb-10 h-8 sm:h-12">
+      <a href="http://www.w3c.org/" target="_blank">
       <img
         src="assets/images/twitter2.png"
-        alt="insta"
+        alt="twitter"
         class="h-full cursor-pointer"
       />
+      </a>
+      <a href="http://www.w3c.org/" target="_blank">
       <img
         src="assets/images/facebook2.png"
-        alt="insta"
+        alt="facebook"
         class="h-full cursor-pointer"
       />
+      </a>
+      <a href="http://www.w3c.org/" target="_blank">
       <img
         src="assets/images/insta2.png"
-        alt="insta"
+        alt="instagram"
         class="h-full cursor-pointer"
       />
+      </a>
     </div>
   </div>
 
